# Zoomix

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
debian/: changelog  control  rules
examples/: config.toml
packaging/etc/xdg/autostart/: io.github.zoomix.desktop
packaging/usr/share/applications/: io.github.zoomix.desktop
packaging/usr/share/doc/zoomix/: README.md
packaging/usr/share/man/man1/: zoomix.1
src/: app.rs  capture.rs  config.rs  geometry.rs  hotkeys.rs  input.rs  logging.rs  main.rs  model.rs  overlay.rs  render.rs  x11.rs
